[package]
name = "robotcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frcrs = { git = "https://github.com/Team-2502/frcrs", branch = "jni" }
tokio = { version = "1.38.0", features = ["full", "rt"] }

[deploy]
team_number = 2502
executable = "target/arm-unknown-linux-gnueabi/release/robotcode"
